--- a/src/main/res/layout/ct_activity_media_sources.xml
+++ b/src/main/res/layout/ct_activity_media_sources.xml
@@ -130,6 +130,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_media_sources_list"
                 android:layout_width="match_parent"
+                android:paddingBottom="60dp"
                 android:layout_height="wrap_content" />
            <!-- Making invisible  for now SHAIK-->
             <RelativeLayout
@@ -212,7 +213,7 @@
         </LinearLayout>
 
         <include
-          android:id="@+id/ilMusicPlayingWidget"
+            android:id="@+id/ilMusicPlayingWidget"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
