--- a/src/main/res/layout/ct_dlg_fragment_edit_away_mode.xml
+++ b/src/main/res/layout/ct_dlg_fragment_edit_away_mode.xml
@@ -8,6 +8,42 @@
     android:padding="24dp"
     android:orientation="vertical">
 
+    <LinearLayout
+      android:id="@+id/lay_txtView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:visibility="gone"
+      android:orientation="vertical">
+
+        <androidx.appcompat.widget.AppCompatTextView
+          android:id="@+id/txt_header"
+          android:textStyle="bold"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          tools:text="@string/forget_network"
+          android:textColor="@color/white"
+          android:textSize="24dp"
+          android:gravity="center_horizontal">
+        </androidx.appcompat.widget.AppCompatTextView>
+
+        <androidx.appcompat.widget.AppCompatTextView
+          android:id="@+id/txt_message"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          tools:text="@string/forget_network_confirmation"
+          android:textColor="@color/white"
+          android:layout_marginVertical="10dp"
+          android:textSize="14dp"
+          android:gravity="center_horizontal">
+        </androidx.appcompat.widget.AppCompatTextView>
+
+    </LinearLayout>
+    <LinearLayout
+      android:id="@+id/lay_editText"
+      android:layout_width="match_parent"
+      android:orientation="vertical"
+      android:visibility="gone"
+      android:layout_height="wrap_content">
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_network_name"
         android:hint="@string/network_name"
@@ -47,35 +83,36 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
-
-    <LinearLayout
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_cancel"
-            android:enabled="true"
-            android:textSize="14sp"
-            android:text="@string/cancel"
-            android:background="@drawable/app_btn_selector"
-            android:textColor="@color/white"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_ok"
-            style="@style/GradientAppButtonStyle"
-            android:layout_marginLeft="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:paddingLeft="0dp"
-            android:paddingRight="0dp"
-            android:text="@string/ok"
-            android:textAllCaps="true"
-            android:textSize="14sp" />
     </LinearLayout>
+    <LinearLayout
+      android:layout_marginTop="16dp"
+      android:orientation="horizontal"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+        <androidx.appcompat.widget.AppCompatButton
+          android:id="@+id/btn_cancel"
+          android:enabled="true"
+          android:textSize="14sp"
+          android:text="@string/cancel"
+          android:background="@drawable/app_btn_selector"
+          android:textColor="@color/white"
+          android:layout_weight="1"
+          android:gravity="center"
+          android:layout_width="wrap_content"
+          android:layout_height="40dp" />
 
+        <androidx.appcompat.widget.AppCompatButton
+          android:id="@+id/btn_ok"
+          style="@style/GradientAppButtonStyle"
+          android:layout_marginLeft="20dp"
+          android:layout_width="wrap_content"
+          android:layout_height="40dp"
+          android:layout_weight="1"
+          android:paddingLeft="0dp"
+          android:paddingRight="0dp"
+          android:text="@string/ok"
+          android:gravity="center"
+          android:textAllCaps="true"
+          android:textSize="14sp" />
+    </LinearLayout>
 </LinearLayout>
