1. Fixed Airplay Meta data not Certification 2. Added Issues Report 3. Revert Back the WifiScan List size changes 4. Added Listeners to Dynamic Sources 5. Small Database Changes 6. Other Jira issues

--- a/src/main/res/layout/ct_acitvity_now_playing.xml
+++ b/src/main/res/layout/ct_acitvity_now_playing.xml
@@ -68,8 +68,7 @@
                         android:singleLine="true"
                         tools:text="RivaFestival21f36a"
                         android:textColor="@color/white"
-                        android:textSize="22sp"
-                        app:fontFamily="sans-serif-medium" />
+                        android:textSize="22sp" />
 
                     <androidx.appcompat.widget.AppCompatImageButton
                         android:id="@+id/iv_alexa_account"
