--- a/src/main/res/layout/ct_activity_wifi_list.xml
+++ b/src/main/res/layout/ct_activity_wifi_list.xml
@@ -52,17 +52,6 @@
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
- <!--   <FrameLayout
-        android:paddingTop="16dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">-->
-
-
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rv_wifi_list"
       android:layout_width="match_parent"
@@ -77,12 +66,11 @@
             android:id="@+id/tv_no_data"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-           android:layout_gravity="center"
-            android:textColor="@color/app_text_color_disabled"
+            android:layout_gravity="center"
+            android:textColor="@color/white"
             android:text="@string/wifi_list_unavailable"
-            android:textSize="16sp"
+            android:textSize="24sp"
             tools:visibility="visible"
             android:visibility="gone" />
 
-    <!--</FrameLayout>-->
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
