--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <color name="grey_400">#5A5D5E</color>
+    <color name="grey">#9E9A9A</color>
 
     //alexa app colors
     <color name="faint_grey" type="color">#F5F5F5</color>
@@ -46,6 +47,7 @@
     <color name="close_mark_night_theme">#FFFFFFFF</color>
     <color name="help_close_mark">#212122</color>
     <color name="spotify_color">#1DB954</color>
+    <color name="issue_report_card_color">#6F7787</color>
 
 
 </resources>
