--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -139,4 +139,23 @@
         <item name="colorAccent">@color/app_text_color_enabled</item>
     </style>
 
+    <!-- TextInput Layout -->
+    <style name="TextInputLayoutTheme" parent="Base.Theme.MaterialComponents">
+        <!-- Customize your theme here. -->
+        <item name="android:windowSoftInputMode">stateHidden|adjustPan</item>
+
+        <!-- Active thumb color & Active track color(30% transparency) -->
+        <item name="colorControlActivated">@color/app_text_color_enabled</item>
+        <!-- Inactive thumb color -->
+        <item name="colorSwitchThumbNormal">@color/brand_dark_grey</item>
+        <!-- Inactive track color(30% transparency) -->
+        <!--<item name="android:colorForeground">@color/brand_dark_grey</item>-->
+        <item name="android:textColor">@color/white</item>
+        <item name="colorAccent">@color/transparent</item>
+
+        <!--Should be importing 'android.support.v7.app.AlertDialog' instead of 'android.app.AlertDialog'-->
+        <item name="alertDialogTheme">@style/AlertDialogTheme</item>
+
+    </style>
+
 </resources>
