--- a/src/main/res/layout/activity_ctbluetooth_device_list.xml
+++ b/src/main/res/layout/activity_ctbluetooth_device_list.xml
@@ -48,10 +48,12 @@
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
     <LinearLayout
+      android:id="@+id/lay_turn_on_bt"
         android:layout_marginTop="?android:attr/actionBarSize"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="visible"
         android:orientation="vertical">
         <RelativeLayout
           android:id="@+id/lay_deviceCount"
@@ -148,6 +150,65 @@
 
         </LinearLayout>
 
+    </LinearLayout>
+    <LinearLayout
+      android:id="@+id/lay_no_bt_on"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      android:visibility="gone"
+      android:paddingTop="?android:attr/actionBarSize"
+      app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+        <ScrollView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:orientation="vertical">
+            <LinearLayout
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
+        <androidx.appcompat.widget.AppCompatTextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center_horizontal"
+          android:gravity="center"
+          android:textSize="@dimen/dimen_20"
+          android:text="@string/turn_on_bluetooth"
+          android:textColor="@color/white" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginHorizontal="20dp"
+          android:lineSpacingExtra="6sp"
+          android:gravity="center_horizontal"
+          android:layout_marginVertical="@dimen/dimen_16"
+          android:text="@string/bluetooth_access"
+          android:textColor="@color/app_text_color_disabled" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginVertical="30dp"
+          app:srcCompat="@drawable/bluetooth_icon" />
+
+        <androidx.appcompat.widget.AppCompatButton
+          android:id="@+id/btn_turn_on_bt"
+          android:layout_width="wrap_content"
+          android:layout_height="50dp"
+          android:layout_gravity="center_horizontal"
+          android:layout_marginBottom="16dp"
+          android:background="@drawable/app_btn_selector"
+          android:enabled="true"
+          android:minWidth="200dp"
+          android:text="@string/turn_on"
+          android:gravity="center"
+          android:visibility="visible"
+          android:textAllCaps="false"
+          android:textColor="@color/white"
+          android:textSize="@dimen/dimen_16" />
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
 
