--- a/src/main/res/layout/ct_activity_media_sources.xml
+++ b/src/main/res/layout/ct_activity_media_sources.xml
@@ -50,6 +50,7 @@
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:padding="5dp"
+                    android:visibility="gone"
                     android:scaleType="centerInside"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     app:srcCompat="@drawable/alexa_account" />
