--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -48,6 +48,7 @@
     <color name="help_close_mark">#212122</color>
     <color name="spotify_color">#1DB954</color>
     <color name="issue_report_card_color">#6F7787</color>
+    <color name="loader_grey">#DDDDDD</color>
 
 
 </resources>
