--- a/src/main/res/layout/activity_bluetooth_hear_sound_qtn.xml
+++ b/src/main/res/layout/activity_bluetooth_hear_sound_qtn.xml
@@ -13,7 +13,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="?android:attr/actionBarSize"
             android:layout_alignStart="@+id/appbarLayout"
             app:contentInsetLeft="0dp"
             app:contentInsetStart="0dp">
@@ -25,18 +25,19 @@
                 <androidx.appcompat.widget.AppCompatTextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:layout_marginLeft="?attr/actionBarSize"
-                  android:layout_marginRight="?attr/actionBarSize"
+                  android:layout_marginLeft="?android:attr/actionBarSize"
+                  android:layout_marginRight="?android:attr/actionBarSize"
                   android:layout_centerInParent="true"
                   android:text="@string/setup_name"
+                  android:textAllCaps="true"
                   android:textColor="@color/white"
                   android:textSize="20sp" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iv_back"
-                    android:layout_width="?attr/actionBarSize"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:layout_width="?android:attr/actionBarSize"
+                    android:layout_height="?android:attr/actionBarSize"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:padding="16dp"
                     app:srcCompat="@drawable/ic_arrow_back_white" />
 
@@ -65,8 +66,9 @@
 
         <Button
             android:id="@+id/btnYes"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_below="@+id/textView2"
             android:layout_marginTop="60dp"
             android:text="@string/yes" />
@@ -75,7 +77,8 @@
             android:id="@+id/btnRetry"
             android:layout_below="@+id/btnYes"
             android:layout_marginTop="30dp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+          android:layout_centerHorizontal="true"
             android:layout_height="wrap_content"
 
             android:text="@string/retry_hearsound" />
