--- a/src/main/res/layout/activity_ctbluetooth_device_list.xml
+++ b/src/main/res/layout/activity_ctbluetooth_device_list.xml
@@ -25,6 +25,7 @@
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   android:text="@string/setup_name"
+                  android:textAllCaps="true"
                   android:textColor="@color/white"
                   android:textSize="20sp" />
 
@@ -82,6 +83,7 @@
               android:layout_below="@+id/txt_deviceCount"
               android:layout_centerInParent="true"
               android:gravity="center"
+              android:visibility="gone"
               android:layout_marginVertical="10dp"
               android:text="@string/choose_device"
               android:textColor="@color/white"
