--- a/src/main/res/layout/ct_activity_connect_to_wifi.xml
+++ b/src/main/res/layout/ct_activity_connect_to_wifi.xml
@@ -27,12 +27,13 @@
                     android:textSize="20sp"
                     android:textColor="@color/white"
                     android:text="@string/app_name"
+                    android:textAllCaps="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iv_back"
                     android:padding="16dp"
-                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
                     app:srcCompat="@drawable/ic_arrow_back_white"
                     android:layout_width="?android:attr/actionBarSize"
                     android:layout_height="?android:attr/actionBarSize" />
@@ -47,7 +48,7 @@
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_full_name"
-            android:layout_marginHorizontal="24dp"
+            android:layout_marginHorizontal="16dp"
             android:theme="@style/AppTextInputLayoutTheme"
             android:hint="@string/device_name"
             android:layout_width="match_parent"
@@ -73,6 +74,7 @@
             android:paddingBottom="16dp"
             android:gravity="center"
             app:fontFamily="sans-serif-light"
+            android:layout_marginHorizontal="16dp"
             android:background="@color/appbar_bg"
             android:text="@string/connect_device_to_wifi"
             android:textColor="@color/white"
@@ -82,48 +84,105 @@
         <LinearLayout
             android:id="@+id/ll_select_wifi"
             android:background="?attr/selectableItemBackground"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginHorizontal="16dp"
             android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize">
+            android:layout_height="wrap_content">
             <androidx.appcompat.widget.AppCompatTextView
                 android:textColor="@color/white"
                 android:layout_weight="1"
                 android:text="@string/select_wifi"
                 app:fontFamily="sans-serif-medium"
+                android:layout_marginVertical="12dp"
                 android:layout_width="wrap_content"
+                android:textStyle="bold"
+                android:textSize="@dimen/dimen_18"
                 android:layout_height="wrap_content" />
+            <LinearLayout
+              android:background="?attr/selectableItemBackground"
+              android:orientation="horizontal"
+              android:layout_width="match_parent"
+              android:paddingVertical="10dp"
+              android:layout_height="wrap_content">
             <androidx.appcompat.widget.AppCompatTextView
-                android:gravity="right|center_vertical"
-                android:visibility="gone"
-                tools:visibility="gone"
+                android:visibility="visible"
                 android:id="@+id/tv_selected_wifi"
-                android:textColor="@color/app_text_color_enabled"
+                android:textColor="@color/white"
                 android:layout_weight="1"
-                android:paddingLeft="24dp"
-                android:paddingRight="24dp"
-                tools:text="Cumulations3"
+                android:textSize="16dp"
+                tools:text="Shaik"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/iv_right_arrow"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 app:srcCompat="@drawable/ic_orange_right_arrow"
-                android:padding="14dp"
-                tools:visibility="visible"
+                android:layout_gravity="end"
                 android:visibility="visible"
                 android:layout_width="?android:attr/actionBarSize"
                 android:layout_height="match_parent" />
+            </LinearLayout>
         </LinearLayout>
         <View
-            android:background="@android:color/white"
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_marginHorizontal="16dp"
-            android:layout_height="0.5dp"/>
+            android:layout_height="0.8dp"/>
+        <RelativeLayout
+          android:id="@+id/password_wifi"
+          android:layout_width="match_parent"
+          android:layout_height="80dp"
+          android:layout_marginHorizontal="16dp"
+          android:layout_marginTop="16dp">
 
+            <androidx.appcompat.widget.AppCompatTextView
+              android:id="@+id/txt_WifiTitle"
+              android:textColor="@color/white"
+              android:layout_weight="1"
+              android:text="@string/wifi_pwd"
+              app:fontFamily="sans-serif-medium"
+              android:layout_marginTop="12dp"
+              android:layout_width="wrap_content"
+              android:textStyle="bold"
+              android:textSize="@dimen/dimen_18"
+              android:layout_height="wrap_content" />
 
-        <com.google.android.material.textfield.TextInputLayout
+            <EditText
+              android:layout_below="@id/txt_WifiTitle"
+              android:id="@+id/et_wifi_password"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginVertical="10dp"
+              android:hint="@string/password_hint"
+              android:maxLength="66"
+              android:background="@color/transparent"
+              android:maxLines="1"
+              tools:text="21342rt3"
+              android:gravity="bottom"
+              android:layout_toLeftOf="@+id/toggle_password_imageview"
+              android:singleLine="true"
+              android:textColor="@color/white"
+              android:textColorHint="@color/grey"
+              android:inputType="textPassword"
+              android:textSize="@dimen/dimen_16" />
+
+            <ImageView
+              android:id="@+id/toggle_password_imageview"
+              android:layout_width="60dp"
+              android:layout_height="50dp"
+              android:layout_marginTop="20dp"
+              android:layout_alignParentEnd="true"
+              android:padding="8dp"
+              android:layout_alignParentBottom="true"
+              android:background="@android:color/transparent"
+              android:src="@drawable/ic_password_invisible" />
+        </RelativeLayout>
+        <View
+          android:background="@color/white"
+          android:layout_width="match_parent"
+          android:layout_marginHorizontal="16dp"
+          android:layout_height="0.8dp"/>
+       <!-- <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -148,13 +207,13 @@
                 android:inputType="textPassword"
                 android:textColor="@android:color/white"
                 android:textSize="14sp" />
-        </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>-->
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_security"
             android:textColor="@color/white"
-            android:padding="8dp"
-            android:layout_marginLeft="14dp"
+            android:paddingVertical="10dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginRight="14dp"
             android:gravity="center_vertical"
             tools:text="Security Type : "
@@ -167,9 +226,8 @@
             android:layout_below="@+id/ssidpasslayout"
             android:layout_marginTop="15dp"
             android:gravity="center"
-            android:paddingLeft="8dp"
             android:visibility="visible"
-            android:layout_marginLeft="15dp">
+            android:layout_marginLeft="16dp">
 
             <CheckBox
                 android:id="@+id/rememCheckBox"
@@ -201,7 +259,7 @@
         </LinearLayout>
         <LinearLayout
             android:layout_marginTop="32dp"
-            android:paddingLeft="24dp"
+            android:paddingLeft="16dp"
             android:paddingRight="24dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -214,17 +272,19 @@
                 android:background="@drawable/app_btn_selector"
                 android:textColor="@color/app_btn_textcolor_selector"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="46dp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_next"
                 style="@style/GradientAppButtonStyleRotated"
-                android:layout_marginLeft="32dp"
+                android:layout_marginLeft="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="46dp"
                 android:layout_weight="1"
                 android:paddingLeft="0dp"
+                android:gravity="center"
                 android:paddingRight="0dp"
                 android:text="@string/next"
                 android:textAllCaps="true"
