--- a/src/main/res/layout/ct_activity_home_tabs.xml
+++ b/src/main/res/layout/ct_activity_home_tabs.xml
@@ -14,7 +14,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="?android:attr/actionBarSize"
             app:contentInsetLeft="0dp"
             app:contentInsetStart="0dp">
 
@@ -31,6 +31,7 @@
                     android:text="@string/app_name"
                     android:textColor="@color/white"
                     android:textSize="22sp"
+                    android:gravity="center_horizontal"
                     android:textAllCaps="true"
                     app:fontFamily="sans-serif-medium" />
 
@@ -38,16 +39,16 @@
                     android:id="@+id/iv_stop_all"
                     android:visibility="gone"
                     tools:visibility="visible"
-                    android:layout_width="?attr/actionBarSize"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:layout_width="?android:attr/actionBarSize"
+                    android:layout_height="?android:attr/actionBarSize"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:padding="12dp"
                     app:srcCompat="@drawable/riva_stop_all" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iv_refresh"
-                    android:layout_width="?attr/actionBarSize"
-                    android:layout_height="?attr/actionBarSize"
+                    android:layout_width="?android:attr/actionBarSize"
+                    android:layout_height="?android:attr/actionBarSize"
                     android:layout_alignParentRight="true"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:padding="12dp"
