--- a/src/main/res/layout/ct_activity_splash.xml
+++ b/src/main/res/layout/ct_activity_splash.xml
@@ -35,6 +35,7 @@
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
+      android:visibility="gone"
       android:layout_marginVertical="15dp"
       android:text="@string/splashscreen_maintext"
       android:textStyle="bold"
@@ -62,7 +63,7 @@
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:gravity="center"
-          android:text="@string/powered_text"
+          android:text="@string/powered_libre"
           android:textColor="@color/white"
           android:padding="10dp"
           android:textSize="16sp"
