--- a/src/main/res/layout/ct_list_item_wifi.xml
+++ b/src/main/res/layout/ct_list_item_wifi.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
+    android:paddingHorizontal="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:clickable="true"
     android:focusable="true"
     android:id="@+id/ll_ssid"
     android:foreground="?attr/selectableItemBackground"
     tools:background="@color/screen_bg">
-
+    <androidx.appcompat.widget.AppCompatImageView
+      android:id="@+id/img_wifiRangeIcon"
+      android:layout_width="30dp"
+      android:visibility="invisible"
+      tools:src="@drawable/full_range"
+      android:layout_height="wrap_content" />
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_ssid_name"
         android:padding="16dp"
+        android:layout_toRightOf="@+id/img_wifiRangeIcon"
         app:fontFamily="sans-serif-light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,8 +38,10 @@
         tools:text="WEP/PSK" />
 
     <View
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:visibility="gone"
         android:background="@color/button_enabled" />
 
-</LinearLayout>
+</RelativeLayout>
