--- a/src/main/res/layout/ct_activity_connect_to_wifi.xml
+++ b/src/main/res/layout/ct_activity_connect_to_wifi.xml
@@ -1,10 +1,13 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/screen_bg">
-
+<RelativeLayout
+  android:id="@+id/lay_ssid_pwd_details"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbarLayout"
         android:background="@color/screen_bg"
@@ -42,6 +45,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
+      android:layout_below="@+id/appbarLayout"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -291,4 +295,15 @@
                 android:textSize="16sp" />
         </LinearLayout>
     </LinearLayout>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
+    <RelativeLayout
+      android:id="@+id/lay_SpeakerSetupWithImage"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:visibility="gone">
+        <include
+          android:id="@+id/lay_SpeakerSetup"
+          layout="@layout/setup_speaker">
+        </include>
+    </RelativeLayout>
+</RelativeLayout>
