--- a/src/main/res/layout/ct_activity_connect_to_wifi.xml
+++ b/src/main/res/layout/ct_activity_connect_to_wifi.xml
@@ -201,17 +201,20 @@
                 android:paddingVertical="10dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/manual_sec_tittle">
+
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:visibility="visible"
                     android:id="@+id/manual_sec_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="@color/transparent"
                     android:hint="@string/manual_security_hint"
-                    app:fontFamily="sans-serif-medium"
-                    android:textSize="@dimen/dimen_16"                    android:background="@color/transparent"
                     android:textColor="@color/white"
                     android:textColorHint="@color/grey"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent" />
+                    android:textSize="@dimen/dimen_16"
+                    android:visibility="visible"
+                    app:fontFamily="sans-serif-medium" />
+
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iv_sec_arrow"
                     android:background="?attr/selectableItemBackgroundBorderless"
